set-time and validation

--- a/set-time-interval/banner.html
+++ b/set-time-interval/banner.html
@@ -23,7 +23,7 @@
     </script>
     </head>
     <body onload="rotate()">
-    <a href=""http://www.google.com"" id="adLink1" target="_top">
+    <a href="http://www.google.com" id="adLink1" target="_top">
     <img src="./img/banner2.png" id="adBanner1" class="img-fluid">
     </a>
     </body></html>
